--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,12 @@
 
+# SERVER CONFIGURATION
+NODE_ENV=development
+PORT=3333
+HOST=0.0.0.0
+
+
+# AUTENTICAÇÃO
+JWT_SECRET=secret-teste-jwt
 
 
 # DATABASE CONFIGURATION
